# rp2040_devtool

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  lv_conf.h  lv_drv_conf.h  main.c  rp2040_devtool
include/: anim.h  event.h  picoboot.h  utils.h
lvgl/src/extra/libs/ffmpeg/: lv_ffmpeg.c
misc/: anim.c  anim_slideout.c  event.c
misc/handlers/: test_handler.c
scripts/: build.sh
src/picoboot_connection/: picoboot_connection.c  picoboot_connection.h
tests/: CMakeLists.txt  mouse-info.txt  sample.c  usbmouse.c
ui/: CMakeLists.txt
ui/handlers/: test_handler.c
ui/pics/: background.xcf
ui/project/: rp2040_devtool.sll  rp2040_devtool.spj
ui/project/assets/: ui_font_FiraCodeSemiBold20.fcfg
ui/project/components/: ButtonBack.ecomp  ImageBG.ecomp
ui/src/: ui.c  ui.h  ui_comp.c  ui_comp.h  ui_font_FiraCodeSemiBold20.c  ui_helpers.c  ui_helpers.h  ui_img_back_png.c  ui_img_flash_png.c  ui_img_log_png.c  ui_img_setting_png.c
